Adicionado postagens e barra de menu fixa

--- a/index.html
+++ b/index.html
@@ -20,6 +20,65 @@
 				</div>
 			</div>			
 		</div>
+
+		<div id="area-principal">
+
+			<div id="postagem">
+				<h2>Título da Postagem</h2>
+				<span class="data-postagem">postado em 21 de dezembro de 2022</span>
+				<img class="img-postagem" src="img/imagem1.png"/>
+				<p>
+					Lorem ipsum feugiat egestas dapibus accumsan erat, quis habitasse consequat eros a habitasse, eros ac ullamcorper amet ullamcorper. blandit amet libero conubia dapibus a curae rhoncus, purus pretium habitant luctus sapien cubilia ante consectetur, cursus aenean sapien amet quam ad. etiam dictumst suscipit morbi facilisis malesuada sollicitudin nostra nullam est, consequat cras quam ligula dictum netus velit nullam diam, odio volutpat ligula duis arcu libero nunc dapibus. hac ultricies donec dolor placerat phasellus massa suscipit vehicula adipiscing luctus curabitur feugiat, hac eros ullamcorper nisl praesent posuere himenaeos ut nulla senectus potenti. 
+				</p>
+
+				<span class="postado">Postado por Silas Santos</span>
+			</div>
+
+			<div id="postagem">
+				<h2>Título da Postagem 2</h2>
+				<span class="data-postagem">postado em 21 de dezembro de 2022</span>
+				<img class="img-postagem" src="img/imagem2.png"/>
+				<p>
+					Lorem ipsum feugiat egestas dapibus accumsan erat, quis habitasse consequat eros a habitasse, eros ac ullamcorper amet ullamcorper. blandit amet libero conubia dapibus a curae rhoncus, purus pretium habitant luctus sapien cubilia ante consectetur, cursus aenean sapien amet quam ad. etiam dictumst suscipit morbi facilisis malesuada sollicitudin nostra nullam est, consequat cras quam ligula dictum netus velit nullam diam, odio volutpat ligula duis arcu libero nunc dapibus. hac ultricies donec dolor placerat phasellus massa suscipit vehicula adipiscing luctus curabitur feugiat, hac eros ullamcorper nisl praesent posuere himenaeos ut nulla senectus potenti. 
+				</p>
+
+				<span class="postado">Postado por Silas Santos</span>
+			</div>			
+
+			<div id="postagem">
+				<h2>Título da Postagem 3</h2>
+				<span class="data-postagem">postado em 21 de dezembro de 2022</span>
+				<img class="img-postagem" src="img/imagem3.png"/>
+				<p>
+					Lorem ipsum feugiat egestas dapibus accumsan erat, quis habitasse consequat eros a habitasse, eros ac ullamcorper amet ullamcorper. blandit amet libero conubia dapibus a curae rhoncus, purus pretium habitant luctus sapien cubilia ante consectetur, cursus aenean sapien amet quam ad. etiam dictumst suscipit morbi facilisis malesuada sollicitudin nostra nullam est, consequat cras quam ligula dictum netus velit nullam diam, odio volutpat ligula duis arcu libero nunc dapibus. hac ultricies donec dolor placerat phasellus massa suscipit vehicula adipiscing luctus curabitur feugiat, hac eros ullamcorper nisl praesent posuere himenaeos ut nulla senectus potenti. 
+				</p>
+
+				<span class="postado">Postado por Silas Santos</span>
+			</div>				
+
+			<div id="postagem">
+				<h2>Título da Postagem 4</h2>
+				<span class="data-postagem">postado em 21 de dezembro de 2022</span>
+				<img class="img-postagem" src="img/imagem4.png"/>
+				<p>
+					Lorem ipsum feugiat egestas dapibus accumsan erat, quis habitasse consequat eros a habitasse, eros ac ullamcorper amet ullamcorper. blandit amet libero conubia dapibus a curae rhoncus, purus pretium habitant luctus sapien cubilia ante consectetur, cursus aenean sapien amet quam ad. etiam dictumst suscipit morbi facilisis malesuada sollicitudin nostra nullam est, consequat cras quam ligula dictum netus velit nullam diam, odio volutpat ligula duis arcu libero nunc dapibus. hac ultricies donec dolor placerat phasellus massa suscipit vehicula adipiscing luctus curabitur feugiat, hac eros ullamcorper nisl praesent posuere himenaeos ut nulla senectus potenti. 
+				</p>
+
+				<span class="postado">Postado por Silas Santos</span>
+			</div>				
+
+			<div id="postagem">
+				<h2>Título da Postagem 5</h2>
+				<span class="data-postagem">postado em 21 de dezembro de 2022</span>
+				<img class="img-postagem" src="img/imagem5.png"/>
+				<p>
+					Lorem ipsum feugiat egestas dapibus accumsan erat, quis habitasse consequat eros a habitasse, eros ac ullamcorper amet ullamcorper. blandit amet libero conubia dapibus a curae rhoncus, purus pretium habitant luctus sapien cubilia ante consectetur, cursus aenean sapien amet quam ad. etiam dictumst suscipit morbi facilisis malesuada sollicitudin nostra nullam est, consequat cras quam ligula dictum netus velit nullam diam, odio volutpat ligula duis arcu libero nunc dapibus. hac ultricies donec dolor placerat phasellus massa suscipit vehicula adipiscing luctus curabitur feugiat, hac eros ullamcorper nisl praesent posuere himenaeos ut nulla senectus potenti. 
+				</p>
+
+				<span class="postado">Postado por Silas Santos</span>
+			</div>				
+
+		</div>
 	</body>
 </html>
 
